--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="pt-br">
 
   <head>
 
@@ -8,9 +8,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="shortcut icon" href="assets/img/favicon.png">
+
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
-    <title> Formulário </title>
+    <title> Formulário de Cadastro </title>
 
   </head>
 
@@ -18,7 +20,7 @@
 
     <div class="container">
 
-      <div class="form_image">
+      <div class="form-image">
 
         <img src="assets/img/img_form.svg">
 
@@ -28,7 +30,7 @@
 
         <form action="#">
 
-          <div class="form-heather">
+          <div class="form-header">
 
             <div class="title">
   
@@ -40,7 +42,7 @@
   
               <button>
   
-                <a href="#">  </a>
+                <a href="#"> Entrar </a>
   
               </button>
   
@@ -107,6 +109,48 @@
               <h6> Gênero: </h6>
 
             </div>
+
+            <div class="gender-group">
+
+              <div class="gender-input">
+
+                <input type="radio" id="female" name="gender">
+                <label for="female"> Feminino </label>
+
+              </div>
+
+              <div class="gender-input">
+
+                <input type="radio" id="male" name="gender">
+                <label for="male"> Masculino </label>
+
+              </div>
+
+              <div class="gender-input">
+
+                <input type="radio" id="others" name="gender">
+                <label for="others"> Outro </label>
+
+              </div>
+
+              <div class="gender-input">
+
+                <input type="radio" id="none" name="gender">
+                <label for="none"> Prefiro não dizer </label>
+
+              </div>
+
+            </div>
+
+          </div>
+
+          <div class="continue-button">
+
+            <button>
+
+              <a href="#"> Continuar </a>
+
+            </button>
 
           </div>
 
